--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,12 @@ version: '3'
 services:
   app:
     image: golang:alpine
-    volume:
+    volumes:
       - ./src:/app
     working_dir: /app
-    command: "bash"
+    command: "go run main.go"
     ports:
       - 3000:3000
+#    environment:
+#      - GOPROXY=goproxy.cn
     container_name: app
